--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@ box-shadow:0 0 8px #fff;
 <a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">ORDINA</a>
 </div>
 
+  
 <div class="video">
 <video src="VID_20260212_024354_063.mp4" controls></video>
 <div class="price">Frozen Fruitella</div>
@@ -126,7 +127,8 @@ box-shadow:0 0 8px #fff;
 <div class="video">
 <video src="VID_20260218_211142_496.mp4" controls></video>
 <div class="price">Premium Frozen</div>
-<a class="order" href="#">ORDINA</a>
+<a class="order" href="#"https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">ORDINA</a>
+
 </div>
 
 </div>
@@ -137,19 +139,19 @@ box-shadow:0 0 8px #fff;
 <div class="video">
 <video src="VID_20260218_212243_412.mp4" controls></video>
 <div class="price">Wedding Cake</div>
-<a class="order" href="#">ORDINA</a>
+<a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">ORDINA</a>
 </div>
 
 <div class="video">
 <video src="VID_20260218_213405_917.mp4" controls></video>
 <div class="price">Super Runtz</div>
-<a class="order" href="#">ORDINA</a>
+<a class="order" href="#"https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">ORDINA</a>
 </div>
 
 <div class="video">
 <video src="VID_20260218_213406_052.mp4" controls></video>
 <div class="price">Sherbert Gelato</div>
-<a class="order" href="#">ORDINA</a>
+<a class="order" href="#"https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">ORDINA</a>
 </div>
 
 </div>
