--- a/index.html
+++ b/index.html
@@ -129,6 +129,10 @@ box-shadow:0 0 8px #fff;
 <div class="price">Premium Frozen</div>
 <a class="order" href="#"https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">ORDINA</a>
 
+<div class="video">
+<video src="VID_20260212_024354_063.mp4" controls></video>
+<div class="price">Frozen Fruitella</div>
+<a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">ORDINA</a>
 </div>
 
 </div>
