--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@ box-shadow:0 0 8px #fff;
 <a class="order" href="#"https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">ORDINA</a>
 
 <div class="video">
-<video src="VID_20260212_024354_063.mp4" controls></video>
-<div class="price">Frozen Fruitella</div>
+<video src="3460183514988799218.mp4" controls></video>
+<div class="price">Mountain Giants premium Frozen purple line</div>
 <a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">ORDINA</a>
 </div>
 
