--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ box-shadow:0 0 8px #fff;
 
 <div class="video">
 <video src="VID_20260218_211142_496.mp4" controls></video>
-<div class="price">Premium Frozen</div>
+<div class="price">dry90u</div>
 <a class="order" href="#"https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">ORDINA</a>
 
 <div class="video">
@@ -136,7 +136,6 @@ box-shadow:0 0 8px #fff;
 </div>
 
 </div>
-
 <!-- CALI -->
 <div id="cali" class="section">
 
