--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@ text-decoration:none;
 .cali{background:#19a7a3}
 .spain{background:#1faa4b}
 .promo{background:#f39c12}
-.pay{background:#e53935}
 
 .section{display:none;margin-top:20px}
 
@@ -67,7 +66,6 @@ border-radius:10px;
 text-decoration:none;
 }
 
-/* panier */
 .cartBtn{
 position:fixed;
 bottom:20px;
@@ -112,30 +110,16 @@ width:220px;
 <a class="btn hash" onclick="openCat('hash')">🍫 Hash</a>
 <a class="btn cali" onclick="openCat('cali')">🇺🇸 Cali</a>
 <a class="btn spain" onclick="openCat('spain')">🇪🇸 Spagna</a>
-<a class="btn promo">🔥 Promo</a>
 
 <!-- HASH -->
 <div id="hash" class="section">
+
 <div class="video">
 <video src="VID_20260129_020719_108.mp4" controls></video>
 <div class="price">Static Mountain Giants</div>
 <button onclick="addCart('Static Mountain Giants')">🛒 Aggiungi</button>
 </div>
-</div>
-<div class="video">div class="video">
-<video src="VID_20260129_020719_108.mp4" controls></video>
-<div class="price">FreshFrozen 
-  Static Mountain Giants</div>
-<a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">ORDINA</a>
-</div>
-<div class="video">div class="video">
-<video src="VID_20260129_020719_108.mp4" controls></video>
-<div class="price">FreshFrozen 
-  Static Mountain Giants</div>
-<a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">ORDINA</a>
-</div>
 
-  
 <div class="video">
 <video src="VID_20260212_024354_063.mp4" controls></video>
 <div class="price">Frozen Fruitella</div>
@@ -145,24 +129,26 @@ width:220px;
 <div class="video">
 <video src="VID_20260218_211142_496.mp4" controls></video>
 <div class="price">dry90u</div>
-<a class="order" href="#"https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">ORDINA</a>
-
-<div class="video">
-<video src="3460183514988799218.mp4" controls></video>
-<div class="price">Mountain Giants premium Frozen purple line</div>
 <a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">ORDINA</a>
+</div>
+
+</div>
+
 <!-- CALI -->
 <div id="cali" class="section">
+
 <div class="video">
 <video src="VID_20260218_213405_917.mp4" controls></video>
 <div class="price">Super Runtz</div>
 <button onclick="addCart('Super Runtz')">🛒 Aggiungi</button>
-<a class="order" href="#"https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">ORDINA</a>
+</div>
 
 <div class="video">
 <video src="VID_20260218_213406_052.mp4" controls></video>
 <div class="price">Sherbert Gelato</div>
-<a class="order" href="#"https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">ORDINA</a>
+</div>
+
+</div>
 
 <!-- SPAIN -->
 <div id="spain" class="section">
@@ -173,9 +159,8 @@ width:220px;
 </div>
 </div>
 
-<!-- panier -->
-<div class="cartBtn" onclick="toggleCart()">
-🛒
+<!-- CART -->
+<div class="cartBtn" onclick="toggleCart()">🛒
 <span id="count" class="cartCount">0</span>
 </div>
 
