--- a/index.html
+++ b/index.html
@@ -6,98 +6,16 @@
 <title>GREEDFARM</title>
 
 <style>
-body{
-margin:0;
-font-family:Arial;
-background:url("IMG_2044.jpeg") center/cover fixed;
-color:white;
-text-align:center;
-}
-
-.overlay{
-background:rgba(0,0,0,.65);
-min-height:100vh;
-padding:20px;
-}
-
-.logo{
-width:110px;
-border-radius:20px;
-box-shadow:0 0 20px #00ff88;
-}
-
-.btn{
-display:block;
-margin:12px auto;
-width:80%;
-padding:16px;
-border-radius:16px;
-font-weight:bold;
-color:white;
-text-decoration:none;
-}
-
-.hash{background:#1faa4b}
-.cali{background:#19a7a3}
-.spain{background:#1faa4b}
-.promo{background:#f39c12}
-
+body{margin:0;font-family:Arial;background:url("IMG_2044.jpeg") center/cover fixed;color:white;text-align:center}
+.overlay{background:rgba(0,0,0,.65);min-height:100vh;padding:20px}
+.logo{width:110px;border-radius:20px;box-shadow:0 0 20px #00ff88}
+.btn{display:block;margin:12px auto;width:80%;padding:16px;border-radius:16px;font-weight:bold;color:white;text-decoration:none}
+.hash{background:#1faa4b}.cali{background:#19a7a3}.spain{background:#1faa4b}.promo{background:#f39c12}.pay{background:#e53935}
 .section{display:none;margin-top:20px}
-
-.video{
-background:rgba(0,0,0,.6);
-padding:10px;
-margin:15px;
-border-radius:12px;
-}
-
+.video{background:rgba(0,0,0,.6);padding:10px;margin:15px;border-radius:12px}
 video{width:100%;border-radius:10px}
-
 .price{margin-top:8px;color:#00ff88;font-weight:bold}
-
-.order{
-display:inline-block;
-margin-top:8px;
-padding:8px 18px;
-background:#00ff88;
-color:black;
-font-weight:bold;
-border-radius:10px;
-text-decoration:none;
-}
-
-.cartBtn{
-position:fixed;
-bottom:20px;
-right:20px;
-background:#00ff88;
-padding:14px;
-border-radius:50%;
-font-size:22px;
-cursor:pointer;
-}
-
-.cartCount{
-position:absolute;
-top:-5px;
-right:-5px;
-background:red;
-color:white;
-border-radius:50%;
-font-size:12px;
-padding:2px 6px;
-}
-
-.cartBox{
-display:none;
-position:fixed;
-bottom:80px;
-right:20px;
-background:black;
-padding:15px;
-border-radius:12px;
-width:220px;
-}
+.order{display:inline-block;margin-top:8px;padding:8px 18px;background:#00ff88;color:black;font-weight:bold;border-radius:10px;text-decoration:none}
 </style>
 </head>
 
@@ -110,63 +28,47 @@ width:220px;
 <a class="btn hash" onclick="openCat('hash')">🍫 Hash</a>
 <a class="btn cali" onclick="openCat('cali')">🇺🇸 Cali</a>
 <a class="btn spain" onclick="openCat('spain')">🇪🇸 Spagna</a>
+<a class="btn promo" onclick="openCat('promo')">🔥 Promo</a>
+<a class="btn pay" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">💳 Pagamento</a>
 
 <!-- HASH -->
 <div id="hash" class="section">
 
-<div class="video">
-<video src="VID_20260129_020719_108.mp4" controls></video>
-<div class="price">Static Mountain Giants</div>
-<button onclick="addCart('Static Mountain Giants')">🛒 Aggiungi</button>
-</div>
+<div class="video"><video src="VID_20260129_020719_108.mp4" controls></video><div class="price">Static Mountain Giants</div><a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">ORDINA</a></div>
 
-<div class="video">
-<video src="VID_20260212_024354_063.mp4" controls></video>
-<div class="price">Frozen Fruitella</div>
-<a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">ORDINA</a>
-</div>
+<div class="video"><video src="VID_20260212_024354_063.mp4" controls></video><div class="price">Frozen Fruitella</div><a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">ORDINA</a></div>
 
-<div class="video">
-<video src="VID_20260218_211142_496.mp4" controls></video>
-<div class="price">dry90u</div>
-<a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">ORDINA</a>
-</div>
+<div class="video"><video src="VID_20260218_211142_496.mp4" controls></video><div class="price">Dry 90u</div><a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">ORDINA</a></div>
+
+<div class="video"><video src="VID_20260218_212432_315.mp4" controls></video><div class="price">Premium Frozen</div><a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">ORDINA</a></div>
+
+<div class="video"><video src="VID_20260218_213406_222.mov" controls></video><div class="price">Fresh Frozen Line</div><a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">ORDINA</a></div>
+
+<div class="video"><video src="telegram_video.mp4" controls></video><div class="price">Hidden Farm Frozen</div><a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">ORDINA</a></div>
 
 </div>
 
 <!-- CALI -->
 <div id="cali" class="section">
 
-<div class="video">
-<video src="VID_20260218_213405_917.mp4" controls></video>
-<div class="price">Super Runtz</div>
-<button onclick="addCart('Super Runtz')">🛒 Aggiungi</button>
-</div>
+<div class="video"><video src="VID_20260218_213405_917.mp4" controls></video><div class="price">Super Runtz</div><a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">ORDINA</a></div>
 
-<div class="video">
-<video src="VID_20260218_213406_052.mp4" controls></video>
-<div class="price">Sherbert Gelato</div>
-</div>
+<div class="video"><video src="VID_20260218_213406_052.mp4" controls></video><div class="price">Sherbert Gelato</div><a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">ORDINA</a></div>
+
+<div class="video"><video src="VID_20260218_213406_351.mp4" controls></video><div class="price">Rainbow Sherbert</div><a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">ORDINA</a></div>
+
+<div class="video"><video src="VID_20260218_213406_770.mp4" controls></video><div class="price">Fortune Cookie</div><a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">ORDINA</a></div>
 
 </div>
 
 <!-- SPAIN -->
 <div id="spain" class="section">
-<div class="video">
-<video src="VID_20260218_212243_412.mp4" controls></video>
-<div class="price">Wedding Cake</div>
-<button onclick="addCart('Wedding Cake')">🛒 Aggiungi</button>
-</div>
+<div class="video"><video src="VID_20260218_212243_412.mp4" controls></video><div class="price">Wedding Cake</div><a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">ORDINA</a></div>
 </div>
 
-<!-- CART -->
-<div class="cartBtn" onclick="toggleCart()">🛒
-<span id="count" class="cartCount">0</span>
-</div>
-
-<div id="cartBox" class="cartBox">
-<h3>Carrello</h3>
-<ul id="cartList"></ul>
+<!-- PROMO -->
+<div id="promo" class="section">
+<div class="video"><h2>🔥 Promo disponibili</h2><a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">APRIRE CHAT</a></div>
 </div>
 
 </div>
@@ -175,29 +77,6 @@ width:220px;
 function openCat(id){
 document.querySelectorAll(".section").forEach(s=>s.style.display="none");
 document.getElementById(id).style.display="block";
-}
-
-let cart=[];
-
-function addCart(name){
-cart.push(name);
-document.getElementById("count").innerText=cart.length;
-updateCart();
-}
-
-function updateCart(){
-let list=document.getElementById("cartList");
-list.innerHTML="";
-cart.forEach(i=>{
-let li=document.createElement("li");
-li.innerText=i;
-list.appendChild(li);
-});
-}
-
-function toggleCart(){
-let c=document.getElementById("cartBox");
-c.style.display=c.style.display=="block"?"none":"block";
 }
 </script>
 
